--- a/svc_furniture/build.gradle
+++ b/svc_furniture/build.gradle
@@ -6,12 +6,25 @@
  * user guide available at https://docs.gradle.org/4.8.1/userguide/tutorial_java_projects.html
  */
 
+buildscript {    
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.0.3.RELEASE"
+    }
+}
+ 
 plugins {
     // Apply the java plugin to add support for Java
     id 'java'
 
     // Apply the application plugin to add support for building an application
     id 'application'
+    
+    id "org.springframework.boot" version "2.0.3.RELEASE"
 }
 
 // Define the main class for the application
@@ -20,6 +33,10 @@ mainClassName = 'App'
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     compile 'com.google.guava:guava:23.0'
+    compile "org.springframework.boot:spring-boot-starter-data-jpa:+"
+    compile "org.springframework.boot:spring-boot-starter-web:+"
+    compile "org.springframework.boot:spring-boot-starter-thymeleaf:+"
+    compile "org.springframework.boot:spring-boot-devtools:+"
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
